@@ -98,6 +98,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15487: Add a __sizeof__ implementation for buffered I/O objects.
+  Patch by Serhiy Storchaka.
+
 - Issue #6056: Make multiprocessing use setblocking(True) on the
   sockets it uses.  Original patch by J Derek Wilson.
 
